--- a/Template/Api/appsettings.json
+++ b/Template/Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "Secret": "20735de232144206ad0750d3561e98e83f873e090b544659b8df00c55e",
+    "ConnectionString": "Data Source=.;Initial Catalog=AppDatabase;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
